2013-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagrw.cc (jtag1::jtagRead): When attempting to read more than
	256 bytes, throw an exception rather than returning a nonsensical
	value.

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (initJtagOnChipDebugging): reenable CMD3_START_DEBUG
	for Xmega (even over JTAG)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Document the JTAGICE3 support.
	* src/main.cc (usage): (Dito.)

2013-01-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc (makeSocket): Be a little more verbose if bind()
	failed with EADDRINUSE.

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: Remove enableProgramming()/disableProgramming()
	calls in fuse handling; the respective backend jtagRead()/jtagWrite()
	functions are in charge of deciding whether they need a programming
	mode or not
	* src/jtag3io.cc: fix device ID recognition when operating on
	debugWIRE targets; activate the #ifdef'ed out jtagActivateOcdenFuse
	call; only call CMD3_START_DEBUG for debugWIRE; at the end of
	initialization, attempt resetProgram() a second time if the first
	time failed (appears to be needed after just activating the OCDEN
	fuse)

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3rw.cc(jtag3::jtagWrite): fix off-by-one error that lead
	to writing wrong data
	* src/remote.cc: Implement GDB 7+ flash write protocol

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/remote.cc: Implement the "monitor" GDB command.

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h (struct breakpoint2): Introduce the has_mask flag.
	* src/jtaggeneric.cc: Fix the logic to commit data mask breakpoints
	to the ICE.

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc: Centralize addBreakpoint(), deleteBreakpoint(),
	and layoutBreakpoints() as they are common between the JTAGICE mkII
	and JTAGICE3.
	* src/jtag2.h: (Dito.)
	* src/jtag3.h: (Dito.)